Implements Framebuffer and Fix bugs
Move "/shaders" directory to "assets/Shaders"
Fix the problem with --config Debug/Release that put the dynamic libs in another folder than root.
Implements FrameBuffer
Fix the camera inverted movement.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,9 +17,9 @@ add_subdirectory(${CMAKE_SOURCE_DIR}/aquarium/libs)
 
 add_executable(Aquarium)
 
-target_sources(Aquarium PRIVATE aquarium/main.cpp)
+target_sources(Aquarium PUBLIC aquarium/main.cpp)
 
-target_compile_features(Aquarium PRIVATE cxx_std_17)
+target_compile_features(Aquarium PUBLIC cxx_std_17)
 
 target_link_libraries(Aquarium
         ${OPENGL_LIBRARY}
